--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ frontend_tests:
     - name: Test frontend
       # Запускаем тесты
       run: |
-        cd frontend/
+        cd backend/
         npm run test
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
