--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,111 +8,84 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    # Блок services аналогичен docker-compose.yml
+
     services:
       postgres:
         image: postgres:13.10
-        # Указываем имя тестовой базы, имя и пароль пользователя в открытом виде,
-        # ведь эта база будет работать только во время прогона тестов
         env:
           POSTGRES_USER: django_user
           POSTGRES_PASSWORD: django_password
           POSTGRES_DB: django_db
         ports:
           - 5432:5432
-        # Эта конструкция описывает проверку готовности сервиса postgres
-        # Если ее не будет, то тесты могут запуститься раньше, чем сервер PostgreSQL
-        # В результате тесты опять решат, что базы нет - и упадут
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Check out code
+      uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
+
       with:
         python-version: 3.9
-
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt 
-    # Этот шаг дополним переменными для доступа к БД
+        pip install -r ./backend/requirements.txt
     - name: Test with flake8 and django tests
-      # Добавляем env-переменные для доступа к БД
       env:
         POSTGRES_USER: django_user
         POSTGRES_PASSWORD: django_password
         POSTGRES_DB: django_db
-        # Сервер БД запущен в Docker, но его порт проброшен на хост
-        # Поэтому подключаемся к 127.0.0.1:5432
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
         python -m flake8 backend/
         cd backend/
         python manage.py test
-
-build_and_push_to_docker_hub:
+  
+  build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
+
     steps:
       - name: Check out the repo
-        # Получение исходного кода из репозитория
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        # Установка сборщика контейнеров docker
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker 
-        # Авторизации на DockerHub
         uses: docker/login-action@v2
-        # При помощи with передаём в action параметры username и password
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          # Хорошо ли держать логин и пароль прямо в коде workflow?
-          # Нет, это не хорошо.
       - name: Push to DockerHub
-        # Одновременный билд и пуш образа в DockerHub
         uses: docker/build-push-action@v4
         with:
-          # Параметр context: ./backend/ указывает, что нужный Dockerfile 
-          # находится в ./backend/
           context: ./backend/
-          # Параметр push: true указывает, что образ нужно не только собрать,
-          # но и отправить на DockerHub
           push: true
-          # В параметре tags задаётся название и тег для образа.
-          # Для каждого пересобранного образа 
-          # устанавливаем тег latest, чтобы потом
-          # на сервере и в docker-compose.yml не указывать версию
-          tags: ваш-логин-на-docker-hub/taski_backend:latest 
+          tags: mikhailsource/taski_backend:latest 
 
-frontend_tests:
+  frontend_tests:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up nodeJS
-      # Это готовый воркфлоу для установки NodeJS на раннер
       uses: actions/setup-node@v3
       with:
-        # Это параметр воркфлоу, указывающий нужную версию NodeJS
         node-version: 18
-
     - name: Install dependencies
-      # Эта команда устанавливает зависимости для фронтенда
       run: |
         cd frontend/
         npm ci
-
     - name: Test frontend
-      # Запускаем тесты
       run: |
         cd frontend/
         npm run test
 
-build_frontend_and_push_to_docker_hub:
+  build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
@@ -131,9 +104,9 @@ build_frontend_and_push_to_docker_hub:
         with:
           context: ./frontend/
           push: true
-          tags: username/taski_frontend:latest  
+          tags: mikhailsource/taski_frontend:latest
 
-build_gateway_and_push_to_docker_hub:
+  build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
@@ -149,7 +122,6 @@ build_gateway_and_push_to_docker_hub:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./nginx/
+          context: ./gateway/
           push: true
-          # Тут вместо username должен быть ваш логин на DockerHub
-          tags: username/taski_gateway:latest 
+          tags: mikhailsource/taski_gateway:latest
