--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
-
       with:
         python-version: 3.9
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -65,7 +65,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: mikhailsource/taski_backend:latest 
+          tags: olgamart/taski_backend:latest 
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -104,7 +104,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: mikhailsource/taski_frontend:latest
+          tags: olgamart/taski_frontend:latest
 
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -124,4 +124,4 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          tags: mikhailsource/taski_gateway:latest
+          tags: olgamart/taski_gateway:latest
