--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,6 +128,7 @@ jobs:
   
   deploy:
     runs-on: ubuntu-latest
+    environment: main < -- here
     needs: 
       # Дождёмся билда всех образов Taski
       - build_and_push_to_docker_hub
