--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,7 +128,6 @@ jobs:
   
   deploy:
     runs-on: ubuntu-latest
-    environment: main < -- here
     needs: 
       # Дождёмся билда всех образов Taski
       - build_and_push_to_docker_hub
@@ -142,10 +141,10 @@ jobs:
       uses: appleboy/scp-action@master
     # Передаём параметры для action appleboy/scp-action:
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
+        HOST: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USER }}
         KEY: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
         source: "docker-compose.production.yml"
         target: "taski"
     - name: Executing remote ssh commands to deploy
